# agent-identity-framework

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIRE_LINE.md  README.md
.github/workflows/: ci.yml
docs/: aaif-compatibility.md  architecture.md  did-methods.md  key-management.md  spiffe-integration.md  zero-trust-agents.md
examples/: basic_identity.go  credential_issuance.go  did_key_example.go
go/: go.mod
go/attestation/: attestation.go
go/examples/basic_identity/: main.go
go/examples/did_resolution/: main.go
go/examples/spiffe_integration/: main.go
go/identity/: agent.go  credential.go  did.go  resolver.go  verification.go
go/keys/: ed25519.go  manager.go  rotation.go
go/oauth/: agent_credentials.go
go/spiffe/: svid.go  workload.go
go/types/: errors.go  identity.go
python/: pyproject.toml
python/src/aumos_identity/: __init__.py  client.py  credential.py  did.py  types.py  verification.py
scripts/: fire-line-audit.sh
typescript/: package.json  tsconfig.json
typescript/src/: client.ts  credential.ts  did.ts  index.ts  types.ts  verification.ts
