[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aumos-agent-identity"
version = "0.1.0"
description = "SPIFFE/DID-compatible identity verification client for AI agents"
readme = "README.md"
license = { text = "BSL-1.1" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "cryptography>=42",
    "PyNaCl>=1.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aumos_identity"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"
