[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aumos-agent-identity"
version = "0.1.0"
description = "SPIFFE/DID-compatible identity verification client for AI agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "MuVeraAI Corporation", email = "oss@muverai.com" },
]
keywords = ["aumos", "agent-identity", "spiffe", "did", "ai-agents", "governance", "identity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "cryptography>=42",
    "PyNaCl>=1.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/aumos-ai/agent-identity-framework"
Repository = "https://github.com/aumos-ai/agent-identity-framework"
Issues = "https://github.com/aumos-ai/agent-identity-framework/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aumos_identity"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"
